<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/life"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewLife"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_60"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@color/blue"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_your_answer_here"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonOk"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@null"
            android:text="@string/ok"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:backgroundTint="@null"
            android:text="@string/next"
            android:textColor="@color/blue"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>