<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonadd"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="75dp"
        android:text="@string/addition"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonsub"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/subtraction"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Button
        android:id="@+id/buttonmul"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        tools:ignore="TextContrastCheck" />
</LinearLayout>